# bash-argparse

./: LICENSE  README.md  bash-argparse.py  pyproject.toml  run_test.sh
.github/: aspell.sh
.github/aspell/: .aspell.en.pws
.github/workflows/: actions.yml  test-actions.yml
doc/: index.md
src/bash-argparse/: __main__.py  core.py
test/: abbrev.test  bool.sh  bool.test  bool_bash.test  bool_batch.test  bool_required.sh  dash-in-name.test  dash.sh  deduce_program.sh  deduce_program_bash.sh  enum.sh  enum.test  help_on_empty.sh  help_on_empty.test  input_path.sh  input_path.test  int.sh  int.test  list.sh  list.test  lit.cfg  output_format.test  output_path.sh  output_path.test  positional.sh  positional.test  prefix.test  prefix_int.sh  readme.sh  required.test  requirements.txt  string.sh  string.test  unsigned.sh  unsigned.test  varargs.sh  varargs.test
test/utils/: not.py
